--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "antd": "^5.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
